test/programs/good/typechecker/function_compsition_2.lq
fun :: !(Qbit -> Qbit)
fun q = reset q

main :: Qbit -> Qbit
main = fun . fun 
