test/programs/bad/function_has_bit_arg__IncorrectNumberOfFunctionArguments.lq
fun :: Bit -> Bit
fun bit arg  = 1

main :: Bit
main = other
